--- a/Queuee2/app/src/main/res/layout/base_dialog_layout.xml
+++ b/Queuee2/app/src/main/res/layout/base_dialog_layout.xml
@@ -6,40 +6,55 @@
     android:id="@+id/base_dialog_layout"
     android:weightSum="1">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="horizontal"
-        android:layout_weight="0.20"
-        android:weightSum="1">
+        android:layout_weight="0.20">
 
-        <Space
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.15"/>
+            android:orientation="horizontal"
+            android:weightSum="1">
 
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.7"
-            android:layout_gravity="center"
-            android:scaleType="fitCenter"
-            android:src="@drawable/logo_lindex"
-            android:id="@+id/base_dialog_logo" />
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.15"/>
 
-        <Space
-            android:layout_width="0dp"
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.7"
+                android:layout_gravity="center"
+                android:scaleType="fitCenter"
+                android:src="@drawable/logo_lindex"
+                android:visibility="invisible"
+                android:id="@+id/base_dialog_logo" />
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.15"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.15"/>
+            android:gravity="center|bottom"
+            android:id="@+id/base_dialog_header"
+            style="@style/headerTextStyle"/>
 
-    </LinearLayout>
+    </FrameLayout>
+
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.14"
         android:gravity="center_vertical|center_horizontal"
-        android:id="@+id/base_dialog_text"
+        android:id="@+id/base_dialog_subheader"
         style="@style/subheaderTextStyle" />
 
     <ImageView
