--- a/Queuee2/app/src/main/res/layout/action_bar_default_layout.xml
+++ b/Queuee2/app/src/main/res/layout/action_bar_default_layout.xml
@@ -38,13 +38,30 @@
             android:layout_height="match_parent"
             android:layout_weight="0.6">
 
-            <ImageView
-                android:layout_height="match_parent"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:id="@+id/action_bar_centered_image" />
-                <!--android:src="@drawable/logo"/>-->
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:weightSum="1">
 
-            <!--REMOVE-->
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="0sp"
+                    android:layout_weight="0.333"/>
+
+                <ImageView
+                    android:layout_height="0sp"
+                    android:layout_width="match_parent"
+                    android:layout_weight="0.333"
+                    android:id="@+id/action_bar_centered_image" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="0sp"
+                    android:layout_weight="0.333"/>
+
+            </LinearLayout>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
