--- a/Queuee2/app/src/main/res/layout/base_linear_layout.xml
+++ b/Queuee2/app/src/main/res/layout/base_linear_layout.xml
@@ -75,7 +75,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/pushed_face_icon"
+            android:src="@drawable/pushed_face"
             android:id="@+id/custom_overlay_image_view"
             android:visibility="invisible"/>
 
