--- a/CashierQueuee/app/src/main/res/values/colors.xml
+++ b/CashierQueuee/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-
     <item name="blue" type="color">#FF33B5E5</item>
+    <item name="happy_blue" type="color">#27b5c3</item>
     <item name="black" type="color">#000</item>
     <item name="start_queue_red" type="color">#CB2B2D</item>
     <item name="purple" type="color">#FFAA66CC</item>
