--- a/Queuee2/app/src/main/res/layout/activity_splash.xml
+++ b/Queuee2/app/src/main/res/layout/activity_splash.xml
@@ -17,7 +17,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.3"
         android:layout_gravity="center_vertical|center_horizontal"
-        android:src="@drawable/logo"/>
+        android:src="@drawable/logo_splash"/>
 
 
     <Space
