--- a/CashierQueuee/app/src/main/res/values-v21/styles.xml
+++ b/CashierQueuee/app/src/main/res/values-v21/styles.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <style name="AppTheme" parent="android:Theme.Material.Light">
+        <item name="android:windowFullscreen">true</item>
         <item name="android:windowBackground">@android:color/white</item>
         <item name="android:actionBarStyle">@style/whiteActionBarStyle</item>
     </style>
