--- a/CashierQueuee/app/src/main/res/values/styles.xml
+++ b/CashierQueuee/app/src/main/res/values/styles.xml
@@ -3,6 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Material.Light">
         <!-- Customize your theme here. -->
+        <item name="android:windowFullscreen">true</item>
         <item name="android:windowBackground">@color/white</item>
         <item name="android:actionBarStyle">@style/whiteActionBarStyle</item>
     </style>
